fix website again

--- a/web/style.css
+++ b/web/style.css
@@ -1,7 +1,7 @@
 @import url("https://jj.is-a.dev/fonts/Operator/index.min.css");
 
 
-#tunnel-url {
+#tunnel {
     text-align: center;
     width: 100%;
 }
